# rsdt-tasks

./: CMakeLists.txt  README.md
cmake/: constants.cmake
prj.sandbox/: CMakeLists.txt
prj.sandbox/calib3d/: CMakeLists.txt
prj.sandbox/calib3d/src/: calib3d.cpp
prj.sandbox/demo_filters/: CMakeLists.txt
prj.sandbox/demo_filters/src/: demo_filters.cpp
prj.sandbox/docproc/: CMakeLists.txt
prj.sandbox/docproc/src/: docproc.cpp  docproc.h  main.cpp  utils.cpp  utils.h
prj.sandbox/facedetect/: CMakeLists.txt
prj.sandbox/facedetect/src/: facedetect.cpp
prj.sandbox/python/: obj_from_motion.py
